@@ -10,5 +10,6 @@ pod_coverage:
   # format is "Class#method" or "Class", regex allowed
   # for either Class or method.
   private:
+    - Dist::Zilla::Plugin::AlienBase::Doc
     - Dist::Zilla::Plugin::AlienBuild
 
