@@ -1,0 +1,11 @@
+package Alien::Foo2;
+
+use strict;
+use warnings;
+use base qw( Alien::Base );
+
+# ALIEN SYNOPSIS
+# ALIEN DESCRIPTION
+# ALIEN SEE ALSO
+
+1;
