@@ -18,11 +18,16 @@ remove = warnings
 remove = base
 remove = List::Util
 remove = JSON::PP
+remove = Carp
 
 remove = Dist::Zilla::Role::FileMunger
 remove = Dist::Zilla::Role::MetaProvider
 remove = Dist::Zilla::Role::PrereqSource
 remove = Test::DZil
+remove = Dist::Zilla::Role::FileFinderUser
+remove = Dist::Zilla::Role::PPI
+remove = Dist::Zilla::Role::TextTemplate
+
 
 [Prereqs]
 Dist::Zilla = 6.000
