@@ -3,5 +3,7 @@ use warnings;
 use Test::More;
 
 require_ok 'Dist::Zilla::Plugin::AlienBuild';
+require_ok 'Dist::Zilla::Plugin::AlienBase';
+require_ok 'Dist::Zilla::Plugin::AlienBase::Doc';
 
 done_testing;
