@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add Dist::Zilla::Plugin::AlienBase::Doc
 
 0.11      2017-03-10 15:08:52 -0500
   - Require Alien::Build 0.25 and Alien::Build 0.038
